--- a/bitnami/flink/Chart.yaml
+++ b/bitnami/flink/Chart.yaml
@@ -9,7 +9,19 @@ dependencies:
     tags:
       - bitnami-common
     version: 2.x.x
-description: Apache Flink is a distributed tracing system. It is used for monitoring and troubleshooting microservices-based distributed systems.
+  - condition: highAvailability.enabled
+    name: zookeeper
+    repository: https://charts.bitnami.com/bitnami
+    tags:
+      - bitnami-zookeeper
+    version: 11.x.x
+  - condition: highAvailability.enabled
+    name: minio
+    repository: https://charts.bitnami.com/bitnami
+    tags:
+      - bitnami-minio
+    version: 12.x.x
+description: Apache Flink is # TODO
 home: https://github.com/bitnami/charts/tree/main/bitnami/flink
 icon: https://bitnami.com/assets/stacks/flink/img/flink-stack-220x234.png
 keywords:
